--- a/frontend/toge-trades/src/components/trade-hub/trade-transfer-icons/ListingTradeIcons.module.css
+++ b/frontend/toge-trades/src/components/trade-hub/trade-transfer-icons/ListingTradeIcons.module.css
@@ -14,6 +14,7 @@
 }
 .offered img{
   background-color: #C9DCF4;
+  justify-self: center;
 }
 .trade-icon{
   width: 2em;
@@ -23,16 +24,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 .image-container {
   position: relative;
   display: inline-block;
-  width: 4em;
+  width: 4em; 
 
 }
 .seeking img{
   background-color: #F4E1C9;
+  justify-self: center;
 }
 
 .image-container img {
